exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /**\n * Add two numbers.\n * @param {number} number1 The first number.\n * @param {number} number2 The second number.\n * @returns {number} The sum of the two numbers.\n */ 1`] = `

  1 | /**
  2 |  * Add two numbers.
  3 |  * @param {number} number1 The first number.
  4 |  * @param {number} number2 The second number.
  5 |  * @returns {number} The sum of the two numbers.
  6 |  */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /**\n * Add two numbers.\n * @param {number} number1 The first number.\n * @param {number} number2 The second number.\n * @returns {number} The sum of the two numbers.\n */ 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 |  * Add two numbers.
    | ^^^^^^^^^^^^^^^^^^^
> 3 |  * @param {number} number1 The first number.
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |  * @param {number} number2 The second number.
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |  * @returns {number} The sum of the two numbers.
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /**
  2 | Add two numbers.
  3 | @param {number} number1 The first number.
  4 | @param {number} number2 The second number.
  5 | @returns {number} The sum of the two numbers.
  6 | */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /**\n * note\n */\n{} 1`] = `

  1 | /**
  2 |  * note
  3 |  */
  4 | {}

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /**\n * note\n */\n{} 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 |  * note
    | ^^^^^^^
> 3 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.
  4 | {}

Output:
  1 | /**
  2 | note
  3 | */
  4 | {}

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /*\n * Hide \"+ 65 releases\" link\n * Hide \"Learn more about GitHub Sponsors\" link\n * Hide \"+ 123 contributors\" link\n */ 1`] = `

  1 | /*
  2 |  * Hide "+ 65 releases" link
  3 |  * Hide "Learn more about GitHub Sponsors" link
  4 |  * Hide "+ 123 contributors" link
  5 |  */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): /*\n * Hide \"+ 65 releases\" link\n * Hide \"Learn more about GitHub Sponsors\" link\n * Hide \"+ 123 contributors\" link\n */ 2`] = `

Message:
> 1 | /*
    | ^^
> 2 |  * Hide "+ 65 releases" link
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |  * Hide "Learn more about GitHub Sponsors" link
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |  * Hide "+ 123 contributors" link
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /*
  2 | Hide "+ 65 releases" link
  3 | Hide "Learn more about GitHub Sponsors" link
  4 | Hide "+ 123 contributors" link
  5 | */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): {\n\t/*\n\t * JSONC description.\n\t */\n\t\"value\": true\n} 1`] = `

  1 | {
  2 | 	/*
  3 | 	 * JSONC description.
  4 | 	 */
  5 | 	"value": true
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(1): {\n\t/*\n\t * JSONC description.\n\t */\n\t\"value\": true\n} 2`] = `

Message:
  1 | {
> 2 | 	/*
    | 	^^
> 3 | 	 * JSONC description.
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	 */
    | ^^^^ Remove asterisk prefixes and shared indentation from this comment.
  5 | 	"value": true
  6 | }

Output:
  1 | {
  2 | 	/*
  3 | 	JSONC description.
  4 | 	*/
  5 | 	"value": true
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): .example {\n\t/*\n\t * Description.\n\t */\n\tcolor: red;\n} 1`] = `

  1 | .example {
  2 | 	/*
  3 | 	 * Description.
  4 | 	 */
  5 | 	color: red;
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): .example {\n\t/*\n\t * Description.\n\t */\n\tcolor: red;\n} 2`] = `

Message:
  1 | .example {
> 2 | 	/*
    | 	^^
> 3 | 	 * Description.
    | ^^^^^^^^^^^^^^^^
> 4 | 	 */
    | ^^^^ Remove asterisk prefixes and shared indentation from this comment.
  5 | 	color: red;
  6 | }

Output:
  1 | .example {
  2 | 	/*
  3 | 	Description.
  4 | 	*/
  5 | 	color: red;
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): if (condition) {\n\t/**\n\t * Description.\n\t *\n\t * @returns {boolean} Whether it passed.\n\t */\n} 1`] = `

  1 | if (condition) {
  2 | 	/**
  3 | 	 * Description.
  4 | 	 *
  5 | 	 * @returns {boolean} Whether it passed.
  6 | 	 */
  7 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): if (condition) {\n\t/**\n\t * Description.\n\t *\n\t * @returns {boolean} Whether it passed.\n\t */\n} 2`] = `

Message:
  1 | if (condition) {
> 2 | 	/**
    | 	^^^
> 3 | 	 * Description.
    | ^^^^^^^^^^^^^^^^
> 4 | 	 *
    | ^^^
> 5 | 	 * @returns {boolean} Whether it passed.
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 | 	 */
    | ^^^^ Remove asterisk prefixes and shared indentation from this comment.
  7 | }

Output:
  1 | if (condition) {
  2 | 	/**
  3 | 	Description.
  4 | 	
  5 | 	@returns {boolean} Whether it passed.
  6 | 	*/
  7 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): value: {\n\t/**\n\t * note\n\t */\n\tnested: 1\n} 1`] = `

  1 | value: {
  2 | 	/**
  3 | 	 * note
  4 | 	 */
  5 | 	nested: 1
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): value: {\n\t/**\n\t * note\n\t */\n\tnested: 1\n} 2`] = `

Message:
  1 | value: {
> 2 | 	/**
    | 	^^^
> 3 | 	 * note
    | ^^^^^^^^
> 4 | 	 */
    | ^^^^ Remove asterisk prefixes and shared indentation from this comment.
  5 | 	nested: 1
  6 | }

Output:
  1 | value: {
  2 | 	/**
  3 | 	note
  4 | 	*/
  5 | 	nested: 1
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): {\n\t/*\n\t * JSON5 description.\n\t */\n\tvalue: true\n} 1`] = `

  1 | {
  2 | 	/*
  3 | 	 * JSON5 description.
  4 | 	 */
  5 | 	value: true
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(2): {\n\t/*\n\t * JSON5 description.\n\t */\n\tvalue: true\n} 2`] = `

Message:
  1 | {
> 2 | 	/*
    | 	^^
> 3 | 	 * JSON5 description.
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	 */
    | ^^^^ Remove asterisk prefixes and shared indentation from this comment.
  5 | 	value: true
  6 | }

Output:
  1 | {
  2 | 	/*
  3 | 	JSON5 description.
  4 | 	*/
  5 | 	value: true
  6 | }

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(3): /**\n *\n */ 1`] = `

  1 | /**
  2 |  *
  3 |  */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(3): /**\n *\n */ 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 |  *
    | ^^
> 3 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /**
  2 |
  3 | */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(4): /**\n * @param {string} value\n */ 1`] = `

  1 | /**
  2 |  * @param {string} value
  3 |  */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(4): /**\n * @param {string} value\n */ 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 |  * @param {string} value
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /**
  2 | @param {string} value
  3 | */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(5): /**\n * *important*\n */ 1`] = `

  1 | /**
  2 |  * *important*
  3 |  */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(5): /**\n * *important*\n */ 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 |  * *important*
    | ^^^^^^^^^^^^^^
> 3 |  */
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /**
  2 | *important*
  3 | */

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(6): /**\n\t* Description.\n\t*/ 1`] = `

  1 | /**
  2 | 	* Description.
  3 | 	*/

`;

exports[`no-asterisk-prefix-in-documentation-comments > invalid(6): /**\n\t* Description.\n\t*/ 2`] = `

Message:
> 1 | /**
    | ^^^
> 2 | 	* Description.
    | ^^^^^^^^^^^^^^^
> 3 | 	*/
    | ^^^ Remove asterisk prefixes and shared indentation from this comment.

Output:
  1 | /**
  2 | Description.
  3 | */

`;
